[gd_scene load_steps=4 format=3 uid="uid://c6d5kk7l8qfxb"]

[ext_resource type="Script" path="res://common/LevelTransition/LevelTransition.gd" id="1_uv8k2"]
[ext_resource type="Texture2D" uid="uid://bkjsf1bk7gxf7" path="res://icon.svg" id="2_x3k1q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(64, 64)

[node name="LevelTransition" type="Area2D"]
script = ExtResource("1_uv8k2")
target_scene_path = ""
transition_name = "Next Area"
requirement_type = "Any"
interaction_key = "interact"
show_prompt = true
save_checkpoint = true
custom_prompt_text = ""

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="InteractionPrompt" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -60.0
offset_right = 50.0
offset_bottom = -20.0
text = "Press E to enter"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VisualIndicator" type="Sprite2D" parent="."]
texture = ExtResource("2_x3k1q")